--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 2<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 1<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -401,13 +401,13 @@
         import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         const IMGBB_API_KEY = "f012978df48f3596b193c06e05589442";
-        const firebaseConfig = { 
-          apiKey: "AIzaSyA8MxD_m6lKrrQKijlxQ0lQUQdC3OpTEv4", 
-          authDomain: "saas-57e0d.firebaseapp.com", 
-          projectId: "saas-57e0d", 
-          storageBucket: "saas-57e0d.appspot.com", 
-          messagingSenderId: "230026949437", 
-          appId: "1:230026949437:web:9f19f286aefb96e0330b54" 
+        const firebaseConfig = {
+          apiKey: "AIzaSyDZrgh2y3d0fiv5uF_d73Syuo54_39L__8",
+          authDomain: "saas-teste-c8d7a.firebaseapp.com",
+          projectId: "saas-teste-c8d7a",
+          storageBucket: "saas-teste-c8d7a.firebasestorage.app",
+          messagingSenderId: "281601947474",
+          appId: "1:281601947474:web:1e580dbb06b685bf5d2c8b"
         };
 
         let app, db, auth, userId = null, dbCollection, transactionsCollection;
@@ -1268,9 +1268,7 @@
             const { jsPDF } = window.jspdf;
             const pdf = new jsPDF('p', 'mm', 'a4');
             const pdfWidth = pdf.internal.pageSize.getWidth();
-            const pdfHeight = pdf.internal.pageSize.getHeight();
             const margin = 15;
-            let currentY = margin;
 
             try {
                 // 1. Renderizar Detalhes do Pedido
@@ -1280,23 +1278,17 @@
                 const detailsImgProps = pdf.getImageProperties(detailsImgData);
                 const detailsPdfHeight = (detailsImgProps.height * (pdfWidth - margin * 2)) / detailsImgProps.width;
 
-                pdf.addImage(detailsImgData, 'PNG', margin, currentY, pdfWidth - margin * 2, detailsPdfHeight);
-                currentY += detailsPdfHeight + 10; 
+                pdf.addImage(detailsImgData, 'PNG', margin, margin, pdfWidth - margin * 2, detailsPdfHeight);
 
-                // 2. Renderizar Mockups
+                // 2. Renderizar Mockups em uma nova página, se existirem
                 const mockupsElement = document.getElementById('printable-mockups');
                 if (mockupsElement && mockupsElement.querySelector('.mockup-image')) {
+                    pdf.addPage();
                     const mockupsCanvas = await html2canvas(mockupsElement, { scale: 2, useCORS: true, backgroundColor: null });
                     const mockupsImgData = mockupsCanvas.toDataURL('image/png');
                     const mockupsImgProps = pdf.getImageProperties(mockupsImgData);
                     const mockupsPdfHeight = (mockupsImgProps.height * (pdfWidth - margin * 2)) / mockupsImgProps.width;
-
-                    if (currentY + mockupsPdfHeight < pdfHeight - margin) {
-                        pdf.addImage(mockupsImgData, 'PNG', margin, currentY, pdfWidth - margin * 2, mockupsPdfHeight);
-                    } else {
-                        pdf.addPage();
-                        pdf.addImage(mockupsImgData, 'PNG', margin, margin, pdfWidth - margin * 2, mockupsPdfHeight);
-                    }
+                    pdf.addImage(mockupsImgData, 'PNG', margin, margin, pdfWidth - margin * 2, mockupsPdfHeight);
                 }
                 
                 pdf.save(`Pedido_${clientName.replace(/\s/g, '_')}.pdf`);
