--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 1<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 2<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -1256,7 +1256,7 @@
                         </div>
                     </div>
                     <div class="p-4 bg-gray-100 border-t flex flex-col sm:flex-row justify-end space-y-2 sm:space-y-0 sm:space-x-4">
-                        <button id="printPdfBtn" data-name="${order.clientName}" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg">Gerar PDF Completo</button>
+                        <button id="printPdfBtn" data-name="${order.clientName}" data-id="${order.id}" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg">Gerar PDF Completo</button>
                         <button id="closeViewBtn" class="bg-gray-500 text-white font-semibold py-2 px-4 rounded-lg">Fechar</button>
                     </div>
                 </div>`;
@@ -1264,38 +1264,60 @@
             DOM.viewModal.classList.remove('hidden');
         };
 
-        const generateComprehensivePdf = async (clientName) => {
+        const generateComprehensivePdf = async (clientName, orderId) => {
+            const order = allOrders.find(o => o.id === orderId);
+            if (!order) return;
+
             const { jsPDF } = window.jspdf;
             const pdf = new jsPDF('p', 'mm', 'a4');
             const pdfWidth = pdf.internal.pageSize.getWidth();
             const margin = 15;
 
             try {
-                // 1. Renderizar Detalhes do Pedido
+                // Etapa 1: Renderizar e adicionar os detalhes do pedido
                 const detailsElement = document.getElementById('printable-details');
                 const detailsCanvas = await html2canvas(detailsElement, { scale: 2, useCORS: true });
                 const detailsImgData = detailsCanvas.toDataURL('image/png');
                 const detailsImgProps = pdf.getImageProperties(detailsImgData);
                 const detailsPdfHeight = (detailsImgProps.height * (pdfWidth - margin * 2)) / detailsImgProps.width;
-
                 pdf.addImage(detailsImgData, 'PNG', margin, margin, pdfWidth - margin * 2, detailsPdfHeight);
 
-                // 2. Renderizar Mockups em uma nova página, se existirem
-                const mockupsElement = document.getElementById('printable-mockups');
-                if (mockupsElement && mockupsElement.querySelector('.mockup-image')) {
+                // Etapa 2: Adicionar mockups em uma nova página (se existirem)
+                if (order.mockupUrls && order.mockupUrls.length > 0) {
                     pdf.addPage();
-                    const mockupsCanvas = await html2canvas(mockupsElement, { scale: 2, useCORS: true, backgroundColor: null });
-                    const mockupsImgData = mockupsCanvas.toDataURL('image/png');
-                    const mockupsImgProps = pdf.getImageProperties(mockupsImgData);
-                    const mockupsPdfHeight = (mockupsImgProps.height * (pdfWidth - margin * 2)) / mockupsImgProps.width;
-                    pdf.addImage(mockupsImgData, 'PNG', margin, margin, pdfWidth - margin * 2, mockupsPdfHeight);
+                    let currentY = margin;
+
+                    for (const url of order.mockupUrls) {
+                        const img = new Image();
+                        img.crossOrigin = "anonymous";
+                        img.src = url;
+                        await new Promise((resolve, reject) => {
+                            img.onload = resolve;
+                            img.onerror = reject;
+                        });
+
+                        const canvas = document.createElement('canvas');
+                        canvas.width = img.width;
+                        canvas.height = img.height;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0);
+                        const dataUrl = canvas.toDataURL('image/png');
+                        
+                        const imgProps = pdf.getImageProperties(dataUrl);
+                        const aspectRatio = imgProps.width / imgProps.height;
+                        const imgWidth = pdfWidth - (margin * 2);
+                        const imgHeight = imgWidth / aspectRatio;
+
+                        pdf.addImage(dataUrl, 'PNG', margin, currentY, imgWidth, imgHeight);
+                        // No futuro, podemos adicionar lógica para múltiplas imagens por página
+                    }
                 }
                 
                 pdf.save(`Pedido_${clientName.replace(/\s/g, '_')}.pdf`);
 
             } catch (error) {
                 console.error("Erro ao gerar PDF completo:", error);
-                showInfoModal("Não foi possível gerar o PDF do pedido.");
+                showInfoModal("Não foi possível gerar o PDF. Verifique o console para mais detalhes.");
             }
         };
 
@@ -1718,7 +1740,7 @@
                 DOM.viewModal.innerHTML = '';
             }
             if (btn.id === 'printPdfBtn') {
-                generateComprehensivePdf(btn.dataset.name);
+                generateComprehensivePdf(btn.dataset.name, btn.dataset.id);
             }
         });
 
