--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="w-full mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 45<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -1238,8 +1238,8 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-2 text-sm mb-4">
                             <div><strong>Telefone:</strong> ${order.clientPhone || 'N/A'}</div>
                             <div><strong>Status:</strong> <span class="font-semibold">${order.orderStatus}</span></div>
-                            <div><strong>Data do Pedido:</strong> ${order.orderDate ? new Date(order.orderDate + 'T00:00:00').toLocaleDateString() : 'N/A'}</div>
-                            <div><strong>Data de Entrega:</strong> ${order.deliveryDate ? new Date(order.deliveryDate + 'T00:00:00').toLocaleDateString() : 'N/A'}</div>
+                            <div><strong>Data do Pedido:</strong> ${order.orderDate ? new Date(order.orderDate + 'T00:00:00').toLocaleDateString('pt-br') : 'N/A'}</div>
+                            <div><strong>Data de Entrega:</strong> ${order.deliveryDate ? new Date(order.deliveryDate + 'T00:00:00').toLocaleDateString('pt-br') : 'N/A'}</div>
                         </div>
                         <h3 class="font-bold text-lg mt-4">Peças</h3>
                         <table class="w-full text-left text-sm mt-2">
@@ -1255,6 +1255,12 @@
                             <div><strong>Forma de Pagamento:</strong> ${order.paymentMethod || 'N/A'}</div>
                             <div class="font-bold text-red-600 text-xl"><strong>Resta Pagar:</strong> R$ ${(totalValue - (order.downPayment || 0)).toFixed(2)}</div>
                         </div>
+                        
+                        <h3 class="font-bold text-lg mt-4">Arquivos</h3>
+                        <div class="flex flex-wrap gap-4 mt-2">
+                            ${(order.mockupUrls || []).map(url => `<a href="${url}" target="_blank"><img src="${url}" class="w-32 h-32 object-cover border rounded-md mockup-image"></a>`).join('') || 'Nenhum arquivo.'}
+                        </div>
+
                         <div id="mockupContainerPdf" class="hidden">
                             <h3 class="font-bold text-lg mt-4 html2pdf__page-break">Arquivos</h3>
                             <div class="flex flex-wrap gap-4 mt-2">
@@ -1278,7 +1284,7 @@
             const element = document.getElementById('printable-details');
             const mockupContainer = document.getElementById('mockupContainerPdf');
 
-            // Temporariamente torna os mockups visíveis para a captura do PDF
+            // Temporariamente torna o container de mockups do PDF visível para a captura
             mockupContainer.classList.remove('hidden');
 
             const options = {
@@ -1289,8 +1295,8 @@
                 jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
             };
 
-            // Gera o PDF e, na conclusão, esconde os mockups da tela novamente
-            html2pdf().from(element).set(options).save().then(() => {
+            // Gera o PDF e, na conclusão (sempre), esconde o container de mockups do PDF novamente
+            html2pdf().from(element).set(options).save().finally(() => {
                 mockupContainer.classList.add('hidden');
             });
         };
@@ -1330,10 +1336,11 @@
             document.body.appendChild(tempContainer);
             
             try {
-                const canvas = await html2canvas(tempContainer.firstElementChild, { scale: 2 });
-                const { jsPDF } = window; // html2pdf.js anexa o jsPDF ao objeto window
-                const pdf = new jsPDF('p', 'mm', 'a4');
+                // A biblioteca html2pdf anexa as dependências ao objeto window
+                const { jsPDF } = window;
+                const canvas = await window.html2canvas(tempContainer.firstElementChild, { scale: 2 });
                 const imgData = canvas.toDataURL('image/png');
+                const pdf = new jsPDF('p', 'mm', 'a4');
                 const pdfWidth = pdf.internal.pageSize.getWidth();
                 const imgProps = pdf.getImageProperties(imgData);
                 const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
