--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
         .status-Entregue { @apply bg-gray-200 text-gray-800; }
         .kanban-board { display: flex; overflow-x: auto; padding-bottom: 1rem; gap: 1.5rem; }
         .kanban-column { flex: 0 0 340px; max-width: 340px; }
-        /* Classe para forçar quebra de página na geração do PDF com html2pdf.js */
-        .html2pdf__page-break { page-break-before: always; }
     </style>
 </head>
 <body class="antialiased text-gray-800 bg-slate-50">
@@ -52,7 +50,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="w-full mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 45<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -1256,15 +1254,17 @@
                             <div class="font-bold text-red-600 text-xl"><strong>Resta Pagar:</strong> R$ ${(totalValue - (order.downPayment || 0)).toFixed(2)}</div>
                         </div>
                         
-                        <h3 class="font-bold text-lg mt-4">Arquivos</h3>
-                        <div class="flex flex-wrap gap-4 mt-2">
-                            ${(order.mockupUrls || []).map(url => `<a href="${url}" target="_blank"><img src="${url}" class="w-32 h-32 object-cover border rounded-md mockup-image"></a>`).join('') || 'Nenhum arquivo.'}
+                        <div id="mockupContainerView" class="pt-4 border-t mt-4">
+                            <h3 class="font-bold text-lg">Arquivos</h3>
+                            <div class="flex flex-wrap gap-4 mt-2">
+                                ${(order.mockupUrls || []).map(url => `<a href="${url}" target="_blank"><img src="${url}" class="w-32 h-32 object-cover border rounded-md mockup-image"></a>`).join('') || 'Nenhum arquivo.'}
+                            </div>
                         </div>
 
                         <div id="mockupContainerPdf" class="hidden">
-                            <h3 class="font-bold text-lg mt-4 html2pdf__page-break">Arquivos</h3>
+                            <h3 class="font-bold text-lg mt-4">Arquivos</h3>
                             <div class="flex flex-wrap gap-4 mt-2">
-                                ${(order.mockupUrls || []).map(url => `<img src="${url}" class="w-full h-auto object-contain border rounded-md mockup-image my-4">`).join('') || ''}
+                                ${(order.mockupUrls || []).map(url => `<img src="${url}" class="w-full h-auto object-contain border rounded-md mockup-image mt-4">`).join('') || ''}
                             </div>
                         </div>
                     </div>
