--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         input[type="file"]::file-selector-button { @apply bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-lg hover:bg-gray-300 transition duration-300 border-none mr-4 cursor-pointer; }
         .size-input-container { @apply flex flex-col items-center w-24; }
         
-        /* ATUALIZAÇÃO DE ESTILO - BOTÕES DE TIPO DE ENTRADA */
-        .part-type-selector { @apply px-4 py-2 text-sm font-medium border border-gray-300 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1; }
+        /* CORREÇÃO DE ESTILO - BOTÕES DE TIPO DE ENTRADA */
+        .part-type-selector { @apply px-4 py-2 text-sm font-medium border-gray-300 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1; }
         .part-type-selector.active { @apply bg-blue-600 border-blue-600 text-white z-10; }
         .part-type-selector:not(.active) { @apply bg-white text-gray-700 hover:bg-gray-50; }
 
@@ -39,6 +39,9 @@
         .status-Entregue { @apply bg-gray-200 text-gray-800; }
         .kanban-board { display: flex; overflow-x: auto; padding-bottom: 1rem; gap: 1.5rem; }
         .kanban-column { flex: 0 0 340px; max-width: 340px; }
+        
+        /* INDICADOR DE AMBIENTE DE TESTE */
+        .env-test-header { @apply bg-yellow-100 border-b border-yellow-200; }
     </style>
 </head>
 <body class="antialiased text-gray-800 bg-slate-50">
@@ -64,7 +67,7 @@
             <div class="w-full mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div class="flex items-center">
                     <img src="https://i.ibb.co/BHq1HsPG/2-removebg-preview.png" alt="Logo" class="h-8 w-auto mr-3">
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos1</h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="priceTableBtn" class="bg-gray-200 text-gray-700 font-semibold py-2 px-3 rounded-lg shadow-md hover:bg-gray-300 transition duration-300 flex items-center justify-center" title="Tabela de Preços">
@@ -427,8 +430,8 @@
             <div class="flex items-center space-x-4 pt-2 border-t">
                <label class="text-sm font-semibold text-gray-700">Tipo de Entrada:</label>
                <div class="inline-flex rounded-md shadow-sm" role="group">
-                   <button type="button" class="part-type-selector rounded-l-lg" data-type="comum">Comum</button>
-                   <button type="button" class="part-type-selector rounded-r-lg -ml-px" data-type="detalhado">Detalhado</button>
+                   <button type="button" class="part-type-selector rounded-l-lg border" data-type="comum">Comum</button>
+                   <button type="button" class="part-type-selector rounded-r-lg border-t border-r border-b" data-type="detalhado">Detalhado</button>
                </div>
             </div>
             <div class="part-content-container mt-2"></div>
@@ -752,7 +755,7 @@
                 return indexA - indexB;
             });
         };
-      // 3. Funções de Negócio (addPart, saveOrder, renderOrders, etc.)
+        // 3. Funções de Negócio (addPart, saveOrder, renderOrders, etc.)
         const handleForgotPassword = async (e) => {
             e.preventDefault();
             const email = await showForgotPasswordModal();
@@ -859,6 +862,13 @@
                 checkBackupReminder();
                 triggerAutoBackupIfNeeded();
                 updateNavButton();
+
+                // APLICA INDICADORES VISUAIS PARA AMBIENTE DE TESTE
+                if (!isProduction) {
+                    document.title = "[TESTE] " + document.title;
+                    document.querySelector('header').classList.add('env-test-header');
+                }
+
             } else {
                 showInfoModal("Erro: Usuário não associado a nenhuma empresa. Fale com o suporte.");
                 handleLogout();
@@ -2498,7 +2508,7 @@
                 showInfoModal("Não foi possível salvar o saldo inicial.");
             }
         };
-      // 5. Event Listeners
+        // 5. Event Listeners
         window.addEventListener('load', initializeFirebase);
         DOM.loginForm.addEventListener('submit', handleLogin);
         DOM.forgotPasswordBtn.addEventListener('click', handleForgotPassword);
